# rust-algorithm-problems

./: .gitignore
codejam/: Cargo.toml  run-debug.bat  run-release.bat  rustfmt.toml
codejam/src/: lib.rs  main.rs
codejam/src/algo/: large_nums.rs  mod.rs  vectors.rs
codejam/src/algo_ebtech/: arq_tree.rs  math.rs  mod.rs  scanner.rs  string_proc.rs
codejam/src/util/: binary_sum_tree.rs  bitvec64.rs  codejam.rs  grid.rs  input.rs  log.rs  math.rs  mod.rs  seg.rs  vector_2d.rs
codejam/src/y2016qual/: a.rs  b.rs  c.rs  d.rs
codejam/src/y2017qual/: a.rs  b.rs  c.rs  d.rs  d_debug.rs
codejam/src/y2017round1A/: a.rs  b.rs  c.rs
codejam/src/y2017round1B/: B-large-check.out  B-test.in  B_check.rs  C-small-practice.out  a.rs  b.rs  b_backtracking.rs  c.rs
codejam/src/y2017round1C/: A-large-practice.out  a.rs  b.rs  c.rs
codejam/src/y2017round2/: B_check.rs  C-large-practice-backtracking.out  C-large-practice.out  C_check.rs  a.rs  b.rs  c.rs  d.rs
codejam/src/y2017round3/: B-large-practice.out  C-large-practice.out  C-small-practice.out  a.py  a.rs  b.py  b.rs  d.rs
codejam/src/y2017round4/: A.cpp  C-small-practice.out  a.rs  b.rs  e.rs  f.rs  f_small.rs  mod.rs
codejam_2008/: Cargo.toml
codejam_2008/src/: main.rs
codejam_2008/src/y2008beta/: a.rs  b.rs  c.rs  d.rs
codejam_2008/src/y2008practice/: a.rs  b.rs  c.rs  d.rs
codejam_2008/src/y2008qual/: B-large-practice.out  B-small-practice.out  C-large-practice.out  C-small-practice.out  a.rs  b.rs  c.rs
codejam_2008/src/y2008round1a/: a.rs  b.rs  c.rs
codejam_2008/src/y2008round1b/: A-small-practice.out  B-large-practice.out  C-small-practice.in  a.rs  b.rs  c.rs
codejam_2008/src/y2008round1c/: B-large-practice.out  B-small-practice.out  C-small-practice.out  a.rs  b.rs  c.rs
codejam_2008/src/y2008round2/: A-large-practice.out  A-small-practice.out  C-large-practice.out  C-small-practice.in  C-small-practice.out  a.rs  b.rs  c.rs  d.rs  starwars.tex
codejam_2008/src/y2008round3/: A-large-practice.out  A-small-practice.out  C-large-practice.out  C-small-practice.out  D-large-practice.out  D-small-practice.out  a.rs  b.rs  c.rs  d.rs  mod.rs
codejam_2008/src/y2008round_apac/: B-large-practice.out  B-small-practice.out  C-large-practice.out  C-small-practice.out  a.rs  b.rs  c.rs  d.rs
codejam_2016/: Cargo.toml
codejam_2016/src/: main.rs
codejam_2016/src/y2016qual/: C-small-practice.out  D-large-practice.out  D-small-practice.out  a.rs  b.rs  c.rs  d.rs  mod.rs
codejam_2016/src/y2016round1A/: B-large-practice.out  B-small-practice.out  a.rs  b.rs  c.rs  mod.rs
codejam_2016/src/y2016round1B/: A-large-practice.out  A-small-practice.out  B-large-practice.out  B-small-practice.out  C-large-practice.out  a.rs  b.rs  c.rs  mod.rs
codejam_2016/src/y2016round1C/: B-small-practice.out  C-small-practice.out  a.rs  b.rs  c.rs
codejam_2016/src/y2016round1a/: a.rs
codejam_2016/src/y2016round1c/: A-large-practice.out  A-small-practice.out  B-large-practice.out  B-small-practice.out  C-large-practice.out  C-small-practice.out  b.rs
codejam_2016/src/y2016round2/: A-small-practice.out  a.rs  (+11 more)
codejam_2017/: Cargo.toml
codejam_2017/src/: main.rs
(+122 files in other folders)
