[package]
name = "rust-algorithm-problems"
version = "0.1.0"
authors = ["eric7237cire <eric7237cire@hotmail.fr>"]
edition = "2018"

# See https://github.com/alexcrichton/cargo-vendor if overrides are wanted
[dependencies]
#log4rs ="*"
log = {version = "*", features = ["max_level_debug", "release_max_level_warn"] }
itertools = "*"
#num = "*"
bimap = "0.1"
bit-vec = "*"
bit-set = "*"
threadpool = "*"
indexmap = "*"
permutohedron = "*"
num-integer = "*"
num-traits = "*"
rand = "*"
try_opt = "*"
