[package]
name = "rust-algorithm-problems"
version = "0.1.0"
authors = ["eric7237cire <eric7237cire@hotmail.fr>"]
edition = "2018"

[lib]
name = "codejam"
path = "src/lib.rs"

# See https://github.com/alexcrichton/cargo-vendor if overrides are wanted
[dependencies]
log = {version = "*", features = ["max_level_debug", "release_max_level_warn"] }
itertools = "*"
bit-vec = "*"
num-integer = "*"
num-traits = "*"
num-bigint = "*"
rand = "*"