[package]
name = "codejam_2008"
version = "0.1.0"
authors = ["eric7237cire <eric7237cire@gmail.com>"]
edition = "2018"

[dependencies]
rust-algorithm-problems = { path = "../codejam" }
log = {version = "*", features = ["max_level_debug", "release_max_level_warn"] }
itertools = "*"
# For lower_bound
superslice = "*"
hungarian = "1.1.0"
bit-vec = "*"
bit-set = "*"