[package]
name = "codejam_2016"
version = "0.1.0"
authors = ["eric7237cire <eric7237cire@gmail.com>"]
edition = "2018"

[dependencies]
rust-algorithm-problems = { path = "../codejam" }
bit-set = "*"
bit-vec = "*"
num-traits = "*"
num-bigint = "*"
itertools = "*"
log = {version = "*", features = ["max_level_debug", "release_max_level_warn"] }
#simplelog = "*"